--- a/BullionCatalog/templates/deleteCategory.html
+++ b/BullionCatalog/templates/deleteCategory.html
@@ -4,8 +4,9 @@
 	</head>
 	
 <body>
-
-	<h1>Delete Category</h1>
+	<h1>Bullion</h1>
+	<
+	<h2>Delete Category</h2>
 	</br>
 	
 	<form action = '{{url_for('deleteCategory', category_id = category_id) }}' method = 'post'>
