--- a/BullionCatalog/templates/categories.html
+++ b/BullionCatalog/templates/categories.html
@@ -7,9 +7,17 @@
 	
 <body>
 
-	<h1>Bullion</h1>
-	<div class="header" > 
-		</div>
+	<h1>Bullion <br/>
+	<img src="static/bullion-header.jpeg" alt="Bullion Image not Available" style="width:1000; height:125;">
+	</h1>
+	<h2></h2>
+		<div class="header" >
+		{% if not login_session['user_id'] %}
+    	<a href= '{{ url_for('showLogin') }}'> Sign In </a>
+  		{% else %}
+  		<a href="{{url_for('gdisconnect')}}">Sign Out</a>
+ 		 {% endif %}
+	    </div>
 
 		{% with messages = get_flashed_messages()%}
 
