--- a/BullionCatalog/templates/public_categories.html
+++ b/BullionCatalog/templates/public_categories.html
@@ -7,12 +7,12 @@
 	
 <body>
 
-	<h1>Cat Supplies</h1>
+	<h1>Bullion</h1>
 	<div class="header" > 
 		{% if not login_session['user_id'] %}
-    	<a href= '{{ url_for('showLogin') }}'> Sign in </a>
+    	<a href= '{{ url_for('showLogin') }}'> Sign In </a>
   		{% else %}
-  		<a href="{{url_for('gdisconnect')}}">Sign out</a>
+  		<a href="{{url_for('gdisconnect')}}">Sign Out/a>
  		 {% endif %}
 	    </div>
 
