--- a/BullionCatalog/templates/editCoin.html
+++ b/BullionCatalog/templates/editCoin.html
@@ -21,7 +21,7 @@
 	</form>
 	
 	</br>
-	<a href = '{{url_for('showCoins', category_id = category_id)}}'> Cancel </a>
+	<a href = '{{url_for('showCategory', category_id = category_id)}}'> Cancel </a>
 	</div>
 </body>
 </html>
