--- a/BullionCatalog/templates/public_categories.html
+++ b/BullionCatalog/templates/public_categories.html
@@ -7,7 +7,9 @@
 	
 <body>
 
-	<h1>Bullion</h1>
+	<h1>Bullion Catalog <br/>
+		<img src="static/bullion-header.jpeg" alt="Bullion Image not Available" style="width:1000; height:125;">
+	</h1>
 	<div class="header" > 
 		{% if not login_session['user_id'] %}
     	<a href= '{{ url_for('showLogin') }}'> Sign In </a>
@@ -32,7 +34,7 @@
 
 		<div>
 			</br>
-			<h2><a href = '{{url_for('showCoins', category_id = category.id) }}' > {{category.name}} </a></h2>
+			<h2><a href = '{{url_for('showCategory', category_id = category.id) }}' > {{category.name}} </a></h2>
 			</br>
 			</br>
 		</div>
