--- a/BullionCatalog/templates/newCoin.html
+++ b/BullionCatalog/templates/newCoin.html
@@ -10,7 +10,7 @@
 	<form action = '{{url_for('newCoin', category_id = category_id) }}' method = 'post'>
 	</br></br>
 	<b> Name:</b>
-	<input type = 'text' size='30' name='name' placeholder = 'Create new item'> 
+	<input type = 'text' size='30' name='name' placeholder = 'Create new Coin'>
 	<b> Mint: </b>
 	<input type = 'integer' size='10' name='mint' placeholder = 'Mint'> </br></br>
 	<b> Image URL: </b>
@@ -21,7 +21,7 @@
 	</form>
 
 	</br>
-	<a href = '{{url_for('showCoins', category_id = category_id)}}'> Cancel </a>
+	<a href = '{{url_for('showCategory', category_id = category_id)}}'> Cancel </a>
 	</div>
 </body>
 </html>
