--- a/BullionCatalog/templates/public_categories.html
+++ b/BullionCatalog/templates/public_categories.html
@@ -8,7 +8,7 @@
 <body>
 
 	<h1>Bullion Catalog <br/>
-		<img src="static/bullion-header.jpeg" alt="Bullion Image not Available" style="width:1000; height:125;">
+		<img src="http://i.imgur.com/8drGkD8.jpg" alt="Bullion Image not Available" style="width:1000; height:125;">
 	</h1>
 	<div class="header" > 
 		{% if not login_session['user_id'] %}
